gitops/core/fluxcd-addons/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway
  hostnames:
    - "flux-webhook.brunosabenca.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: webhook-receiver
          port: 80
